--- a/catkin_ws/src/play/maps/field1.yaml
+++ b/catkin_ws/src/play/maps/field1.yaml
@@ -1,4 +1,4 @@
-image: /home/ogiwara/map/field1.pgm
+image: ./field1.pgm
 resolution: 0.050000
 origin: [-100.000000, -100.000000, 0.000000]
 negate: 0
