--- a/catkin_ws/src/play/config/planner.yaml
+++ b/catkin_ws/src/play/config/planner.yaml
@@ -1,5 +1,4 @@
 controller_frequency: 5.0
-recovery_behaviour_enabled: true
 
 NavfnROS:
   allow_unknown: true # Specifies whether or not to allow navfn to create plans that traverse unknown space.
@@ -7,17 +6,17 @@ NavfnROS:
 
 TrajectoryPlannerROS:
   # Robot Configuration Parameters
-  acc_lim_x: 0.5
-  acc_lim_theta: 0.5
+  acc_lim_x: 3
+  acc_lim_theta: 3
 
-  max_vel_x: 3.0
-  min_vel_x: 0.0
+  max_vel_x: 6.0
+  min_vel_x: -6.0
 
-  max_vel_theta: 1.0
-  min_vel_theta: -1.0
+  max_vel_theta: 3.0
+  min_vel_theta: -3.0
   min_in_place_vel_theta: 0.2
 
-  holonomic_robot: false
+  holonomic_robot: true
   escape_vel: -0.1
 
   # Goal Tolerance Parameters
@@ -41,8 +40,7 @@ TrajectoryPlannerROS:
 
   heading_lookahead: 0.325  #How far to look ahead in meters when scoring different in-place-rotation trajectories
   heading_scoring: false  #Whether to score based on the robot's heading to the path or its distance from the path. default false
-  heading_scoring_timestep: 0.8   #How far to look ahead in time in seconds along the simulated trajectory when using heading scoring (double, default: 0.8)
-  dwa: true #Whether to use the Dynamic Window Approach (DWA)_ or whether to use Trajectory Rollout
+  heading_scoring_timestep: 0.8   #How far to look ahead in time in seconds along the simulated trajectory when using heading scoring (double, default: 0.8) o use the Dynamic Window Approach (DWA)_ or whether to use Trajectory Rollout
   simple_attractor: false
   publish_cost_grid_pc: true
 
@@ -51,43 +49,109 @@ TrajectoryPlannerROS:
   escape_reset_dist: 0.1
   escape_reset_theta: 0.1
 
-DWAPlannerROS:
-  # Robot configuration parameters
-  acc_lim_x: 1
-  acc_lim_y: 0
-  acc_lim_th: 0.3
+
+TebLocalPlannerROS:
+    # Trajectory
+
+  teb_autosize: True
+  dt_ref: 0.3
+  dt_hysteresis: 0.1
+  global_plan_overwrite_orientation: True
+  max_global_plan_lookahead_dist: 3.0
+  feasibility_check_no_poses: 5
+
+    # Robot
 
   max_vel_x: 3
-  min_vel_x: 0.0
-  max_vel_y: 0
-  min_vel_y: 0
+  max_vel_x_backwards: 3
+  max_vel_theta: 0.3
+  acc_lim_x: 0.5
+  acc_lim_theta: 0.5
+  min_turning_radius: 0.0
+  footprint_model: # types: "point", "circular", "two_circles", "line", "polygon"
+    type: "polygon"
+    vertices: [[-0.2, -0.13], [-0.2, 0.13], [0.08, 0.13], [0.08, -0.13]]# for type "polygon"
 
-  max_trans_vel: 0.5
-  min_trans_vel: 0.1
-  max_rot_vel: 1.0
-  min_rot_vel: 0.2
+      # GoalTolerance
 
-  # Goal Tolerance Parameters
-  yaw_goal_tolerance: 0.1
   xy_goal_tolerance: 0.2
-  latch_xy_goal_tolerance: false
+  yaw_goal_tolerance: 0.1
+  free_goal_vel: False
 
-  # # Forward Simulation Parameters
-  # sim_time: 2.0
-  # sim_granularity: 0.02
-  # vx_samples: 6
-  # vy_samples: 0
-  # vtheta_samples: 20
-  # penalize_negative_x: true
+    # Obstacles
 
-  # # Trajectory scoring parameters
-  # path_distance_bias: 32.0 # The weighting for how much the controller should stay close to the path it was given
-  # goal_distance_bias: 24.0 # The weighting for how much the controller should attempt to reach its local goal, also controls speed
-  # occdist_scale: 0.01 # The weighting for how much the controller should attempt to avoid obstacles
-  # forward_point_distance: 0.325 # The distance from the center point of the robot to place an additional scoring point, in meters
-  # stop_time_buffer: 0.2  # The amount of time that the robot must stThe absolute value of the veolicty at which to start scaling the robot's footprint, in m/sop before a collision in order for a trajectory to be considered valid in seconds
-  # scaling_speed: 0.25 # The absolute value of the veolicty at which to start scaling the robot's footprint, in m/s
-  # max_scaling_factor: 0.2 # The maximum factor to scale the robot's footprint by
+  min_obstacle_dist: 0.4
+  include_costmap_obstacles: True
+  costmap_obstacles_behind_robot_dist: 1.0
+  obstacle_poses_affected: 30
+  costmap_converter_plugin: ""
+  costmap_converter_spin_thread: True
+  costmap_converter_rate: 5
 
-  # # Oscillation Prevention Parameters
-  # oscillation_reset_dist: 0.25 #How far the robot must travel in meters before oscillation flags are reset (double, default: 0.05)
+    # Optimization
+
+  no_inner_iterations: 5
+  no_outer_iterations: 4
+  optimization_activate: True
+  optimization_verbose: False
+  penalty_epsilon: 0.1
+  weight_max_vel_x: 2
+  weight_max_vel_theta: 1
+  weight_acc_lim_x: 1
+  weight_acc_lim_theta: 1
+  weight_kinematics_nh: 1000
+  weight_kinematics_forward_drive: 1
+  weight_kinematics_turning_radius: 1
+  weight_optimaltime: 1
+  weight_obstacle: 50
+  weight_dynamic_obstacle: 10 # not in use yet
+  alternative_time_cost: False # not in use yet
+
+  # Homotopy Class Planner
+
+  enable_homotopy_class_planning: True
+  enable_multithreading: True
+  simple_exploration: False
+  max_number_classes: 4
+  roadmap_graph_no_samples: 15
+  roadmap_graph_area_width: 5
+  h_signature_prescaler: 0.5
+  h_signature_threshold: 0.1
+  obstacle_keypoint_offset: 0.1
+  obstacle_heading_threshold: 0.45
+  visualize_hc_graph: False
+
+recovery_behaviour_enabled: true
+
+recovery_behaviors:
+  - {name: conservative_reset, type: clear_costmap_recovery/ClearCostmapRecovery}
+  - {name: stepback_and_steerturn_recovery, type: stepback_and_steerturn_recovery/StepBackAndSteerTurnRecovery}
+  - {name: aggressive_reset, type: clear_costmap_recovery/ClearCostmapRecovery}
+
+stepback_and_steerturn_recovery:
+  # 最初の一回だけ旋回したい場合にtrue
+  only_single_steering: true
+  # リカバリ行動の試行回数[回]
+  trial_times         : 3
+  # 障害物までの許容距離[m]．
+  #-- 移動中に，移動方向に対して最も近い障害物がこの距離以内に出現したら停止する．
+  obstacle_patience   : 0.3
+  #-- 移動中に，障害物を確認する頻度[回/sec]
+  obstacle_check_frequency: 5.0
+  # 障害物探索時の角度の分解能[rad] costmapアクセス数を低減したいときに調整する．
+  sim_angle_resolution: 0.1
+  # 障害物探索時のsim更新周期[回/sec] costmapアクセス回数を低減したいときに調整する．
+  simulation_frequency    : 5
+  # back(初回後退時の速度[m/s], 移動距離[m], タイムアウト[sec])
+  linear_vel_back     : -0.3
+  step_back_length    : 1.0
+  step_back_timeout   : 15.0
+  # steer(旋回時の速度[rad/s]と目標回転角度[rad], タイムアウト[sec])
+  linear_vel_steer    : 0.3
+  angular_speed_steer : 0.5
+  turn_angle          : 1.5
+  steering_timeout    : 15.0
+  # forward(旋回→直進→旋回の直進時の速度[m/s]と目標移動距離[m], タイムアウト[sec])
+  linear_vel_forward  : 0.3
+  step_forward_length : 1.0
+  step_forward_timeout: 15.0
