--- a/catkin_ws/src/play/config/planner.yaml
+++ b/catkin_ws/src/play/config/planner.yaml
@@ -4,6 +4,46 @@ NavfnROS:
   allow_unknown: true # Specifies whether or not to allow navfn to create plans that traverse unknown space.
   default_tolerance: 0.1 # A tolerance on the goal point for the planner.
 
+DWAPlannerROS:
+  # Robot configuration parameters
+  acc_lim_x: 1
+  acc_lim_y: 0
+  acc_lim_th: 0.3
+
+  max_vel_x: 3
+  min_vel_x: 0
+  max_vel_y: 0
+  min_vel_y: 0
+
+  max_trans_vel: 0.5
+  min_trans_vel: 0.1
+  max_rot_vel: 1.0
+  min_rot_vel: 0.2
+
+  # Goal Tolerance Parameters
+  yaw_goal_tolerance: 0.1
+  xy_goal_tolerance: 0.2
+  latch_xy_goal_tolerance: false
+
+  # # Forward Simulation Parameters
+  # sim_time: 2.0
+  # sim_granularity: 0.02
+  # vx_samples: 6
+  # vy_samples: 0
+  # vtheta_samples: 20
+  # penalize_negative_x: true
+
+  # # Trajectory scoring parameters
+  # path_distance_bias: 32.0 # The weighting for how much the controller should stay close to the path it was given
+  # goal_distance_bias: 24.0 # The weighting for how much the controller should attempt to reach its local goal, also controls speed
+  # occdist_scale: 0.01 # The weighting for how much the controller should attempt to avoid obstacles
+  # forward_point_distance: 0.325 # The distance from the center point of the robot to place an additional scoring point, in meters
+  # stop_time_buffer: 0.2  # The amount of time that the robot must stThe absolute value of the veolicty at which to start scaling the robot's footprint, in m/sop before a collision in order for a trajectory to be considered valid in seconds
+  # scaling_speed: 0.25 # The absolute value of the veolicty at which to start scaling the robot's footprint, in m/s
+  # max_scaling_factor: 0.2 # The maximum factor to scale the robot's footprint by
+
+  # # Oscillation Prevention Parameters
+
 TrajectoryPlannerROS:
   # Robot Configuration Parameters
   acc_lim_x: 3
@@ -135,7 +175,7 @@ stepback_and_steerturn_recovery:
   trial_times         : 3
   # 障害物までの許容距離[m]．
   #-- 移動中に，移動方向に対して最も近い障害物がこの距離以内に出現したら停止する．
-  obstacle_patience   : 0.3
+  obstacle_patience   : 0.1
   #-- 移動中に，障害物を確認する頻度[回/sec]
   obstacle_check_frequency: 5.0
   # 障害物探索時の角度の分解能[rad] costmapアクセス数を低減したいときに調整する．
