--- a/catkin_ws/src/hakuba/CMakeLists.txt
+++ b/catkin_ws/src/hakuba/CMakeLists.txt
@@ -46,8 +46,11 @@ catkin_install_python(PROGRAMS scripts/test.py
 ## Testing ##
 #############
 
+file(GLOB_RECURSE TEST_SOURCES test/*.cpp)
 ## Add gtest based cpp test target and link libraries
-catkin_add_gtest(${PROJECT_NAME}-test test/test_hakuba.cpp)
+catkin_add_gtest(${PROJECT_NAME}-test
+        ${TEST_SOURCES}
+)
 if(TARGET ${PROJECT_NAME}-test)
   target_link_libraries(${PROJECT_NAME}-test  ${catkin_LIBRARIES})
 endif()
