--- a/catkin_ws/src/hakuba/CMakeLists.txt
+++ b/catkin_ws/src/hakuba/CMakeLists.txt
@@ -33,6 +33,7 @@ file(GLOB_RECURSE PROJECT_HEADERS src/*.h)
 add_executable(time_sync
   ${PROJECT_SOURCES}
   ${PROJECT_HEADERS}
+  src/db/table_iter.cpp
 )
 target_link_libraries(time_sync
   ${catkin_LIBRARIES}
@@ -50,6 +51,7 @@ file(GLOB_RECURSE TEST_SOURCES test/*.cpp)
 ## Add gtest based cpp test target and link libraries
 catkin_add_gtest(${PROJECT_NAME}-test
         ${TEST_SOURCES}
+        src/db/table_iter.cpp
 )
 if(TARGET ${PROJECT_NAME}-test)
   target_link_libraries(${PROJECT_NAME}-test  ${catkin_LIBRARIES})
